# tortilla-python

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  output_file.tortilla  pyproject.toml
docs/: index.md  modules.md
pytortilla/: __init__.py  core.py  main.py  utils.py  utils_gdal.py
pytortilla/compile/: main.py  utils.py
pytortilla/create/: main.py  utils.py
pytortilla/datamodel/: __init__.py  main.py  utils.py
pytortilla/edit/: main.py
pytortilla/load/: load_local.py  load_remote.py  main.py  utils.py
tests/: test_core.py  test_foo.py  test_main.py  test_utils.py
tortilla_spec/: __init__.py  main.py  utils.py
